fixed a few bugs, z-index, and menu

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
 
 .LazyLoad {
   opacity: 0;
-  transition: all 0.25s ease-in-out;
+  transition: all 0.15s ease-in-out;
   position: relative;
   z-index: -1;
 }
