--- a/src/routes/RootComponent.css
+++ b/src/routes/RootComponent.css
@@ -13,7 +13,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  z-index: 0;
+  z-index: 10;
   /* box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); */
 }
 
