--- a/src/routes/ThingsToDo.css
+++ b/src/routes/ThingsToDo.css
@@ -43,7 +43,7 @@
   border: 3px solid black;
   height: 500px;
   object-fit: contain;
-  transition: all 0.25s ease-in-out;
+  transition: all 0.15s ease-in-out;
   background-color: black;
 }
 
