--- a/src/secondary_components/ImageGallery.css
+++ b/src/secondary_components/ImageGallery.css
@@ -5,6 +5,8 @@
   height: 440px;
   overflow-y: scroll;
   justify-content: center;
+  position: relative;
+  z-index: 6;
 }
 
 .gallery_images {
